[gd_scene load_steps=22 format=3 uid="uid://b4pw1nhcnhfnr"]

[ext_resource type="Texture2D" uid="uid://bm2k102hr7l15" path="res://recursos/background.png" id="1_04q62"]
[ext_resource type="Script" path="res://scripts/menu/botoesMenu.gd" id="1_qvqax"]
[ext_resource type="Texture2D" uid="uid://43koqftg6bdf" path="res://recursos/menu/Botões/IniciarBase.png" id="3_w46fu"]
[ext_resource type="Texture2D" uid="uid://osti8074u6kb" path="res://recursos/menu/Botões/IniciarPressed.png" id="4_hsc1j"]
[ext_resource type="Texture2D" uid="uid://r814d3g8xu4d" path="res://recursos/menu/Botões/IniciarHighlight.png" id="5_hm2o2"]
[ext_resource type="Texture2D" uid="uid://bbie1elr8c2lx" path="res://recursos/menu/Botões/SairBase.png" id="6_phrpi"]
[ext_resource type="Texture2D" uid="uid://cikvdk570qy0t" path="res://recursos/menu/Botões/SairPressed.png" id="7_epbvh"]
[ext_resource type="Texture2D" uid="uid://b2716ysh5gmot" path="res://recursos/menu/Botões/SairHighlight.png" id="8_6l7ad"]
[ext_resource type="Texture2D" uid="uid://dtusgt8y1h4fi" path="res://recursos/menu/Botões/VolumeLigado.png" id="10_w364o"]
[ext_resource type="Script" path="res://scripts/global/botao_musica.gd" id="11_e6i2m"]
[ext_resource type="Texture2D" uid="uid://dyc66xpyc3fm0" path="res://recursos/menu/Botões/VolumeDesligado.png" id="11_njevh"]
[ext_resource type="Texture2D" uid="uid://nqbcjwwt8lf6" path="res://recursos/menu/Botões/Configuração.png" id="13_m2x8x"]
[ext_resource type="Script" path="res://scripts/menu/girando.gd" id="15_0vx88"]
[ext_resource type="Texture2D" uid="uid://dxrnorqouoanp" path="res://recursos/letras/e.png" id="15_vdtvp"]
[ext_resource type="Texture2D" uid="uid://deu0g3wlv2nr4" path="res://recursos/letras/t.png" id="16_o87y4"]
[ext_resource type="Texture2D" uid="uid://dadwlsm5lbuyn" path="res://recursos/letras/r.png" id="17_p1gw0"]
[ext_resource type="Texture2D" uid="uid://cxn7bo4qgwsn4" path="res://recursos/letras/m.png" id="18_d7kp2"]
[ext_resource type="Texture2D" uid="uid://c5qjutpc0vobl" path="res://recursos/letras/a.png" id="19_gpfhg"]
[ext_resource type="Texture2D" uid="uid://b23ut4623xvro" path="res://recursos/letras/n.png" id="20_be8vm"]
[ext_resource type="Texture2D" uid="uid://bu6vn3gfx3xv6" path="res://recursos/letras/i.png" id="21_n7w1d"]
[ext_resource type="Texture2D" uid="uid://b2wmbjvsu72xr" path="res://recursos/letras/l.png" id="21_xdyxl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qvqax")

[node name="Background" type="TextureRect" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_04q62")
expand_mode = 1

[node name="Botoes" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="Iniciar" type="TextureButton" parent="Botoes"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -314.0
offset_right = 194.0
offset_bottom = -194.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_w46fu")
texture_pressed = ExtResource("4_hsc1j")
texture_hover = ExtResource("5_hm2o2")
ignore_texture_size = true
stretch_mode = 5

[node name="Sair" type="TextureButton" parent="Botoes"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -144.0
offset_right = 194.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_phrpi")
texture_pressed = ExtResource("7_epbvh")
texture_hover = ExtResource("8_6l7ad")
ignore_texture_size = true
stretch_mode = 5

[node name="MusgaOnOff" type="TextureButton" parent="Botoes"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -532.0
offset_top = -96.0
offset_right = -462.0
offset_bottom = -26.0
grow_vertical = 0
focus_mode = 0
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
texture_normal = ExtResource("10_w364o")
texture_pressed = ExtResource("11_njevh")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("11_e6i2m")

[node name="Configuraçoes" type="TextureButton" parent="Botoes"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 450.0
offset_top = -96.0
offset_right = 520.0
offset_bottom = -26.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
texture_normal = ExtResource("13_m2x8x")
ignore_texture_size = true
stretch_mode = 5

[node name="Titulo" type="Node2D" parent="."]
position = Vector2(564, 134)
script = ExtResource("15_0vx88")

[node name="L" type="Sprite2D" parent="Titulo"]
position = Vector2(-231, -41.6284)
rotation = -0.0174533
scale = Vector2(0.2, 0.2)
texture = ExtResource("21_xdyxl")

[node name="E" type="Sprite2D" parent="Titulo"]
position = Vector2(-111, -41.6284)
rotation = 0.0261799
scale = Vector2(0.2, 0.2)
texture = ExtResource("15_vdtvp")

[node name="T" type="Sprite2D" parent="Titulo"]
position = Vector2(9, -41.6284)
rotation = -0.0349066
scale = Vector2(0.2, 0.2)
texture = ExtResource("16_o87y4")

[node name="R" type="Sprite2D" parent="Titulo"]
position = Vector2(129, -41.6284)
scale = Vector2(0.2, 0.2)
texture = ExtResource("17_p1gw0")

[node name="A" type="Sprite2D" parent="Titulo"]
position = Vector2(249, -41.6284)
rotation = 0.0349066
scale = Vector2(0.2, 0.2)
texture = ExtResource("19_gpfhg")

[node name="M" type="Sprite2D" parent="Titulo"]
position = Vector2(-231, 58.3716)
rotation = 0.0261799
scale = Vector2(0.2, 0.2)
texture = ExtResource("18_d7kp2")

[node name="A2" type="Sprite2D" parent="Titulo"]
position = Vector2(-111, 58.3716)
rotation = -0.0174533
scale = Vector2(0.2, 0.2)
texture = ExtResource("19_gpfhg")

[node name="N" type="Sprite2D" parent="Titulo"]
position = Vector2(9.00006, 58.3716)
rotation = 0.0261799
scale = Vector2(0.2, 0.2)
texture = ExtResource("20_be8vm")

[node name="I" type="Sprite2D" parent="Titulo"]
position = Vector2(129, 58.3716)
scale = Vector2(0.2, 0.2)
texture = ExtResource("21_n7w1d")

[node name="A3" type="Sprite2D" parent="Titulo"]
position = Vector2(249, 58.3716)
rotation = -0.0261799
scale = Vector2(0.2, 0.2)
texture = ExtResource("19_gpfhg")

[connection signal="pressed" from="Botoes/Iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="Botoes/Sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="Botoes/MusgaOnOff" to="." method="_on_musga_on_off_pressed"]
[connection signal="pressed" from="Botoes/MusgaOnOff" to="Botoes/MusgaOnOff" method="_on_pressed"]
[connection signal="pressed" from="Botoes/Configuraçoes" to="." method="_on_configuraçoes_pressed"]
